<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="test.android.vassilis.localchatting.MainActivity"
    android:background="@drawable/mes_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/youLabel"
        android:id="@+id/youLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lobbyLabel"
        android:id="@+id/lobbyLabel"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/messages"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/messages"
        android:layout_above="@+id/linearLayout"
        android:weightSum="2"
        android:layout_below="@+id/youLabel">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/myMessages"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lobbyMessages"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:gravity="right" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/newMessage"
            android:hint="@string/textHint"
            android:gravity="top|left"
            android:maxLines="3"
            android:textColor="@color/bright_foreground_inverse_material_dark"
            android:textIsSelectable="false"
            android:imeOptions="actionSend"
            android:inputType="textCapSentences|textAutoCorrect"
            android:background="@color/accent_material_light" />

    </LinearLayout>

</RelativeLayout>
